Migrated from guava to native java 8 constructs
Now that we’ve moved the re-usable pieces to core, there is no reason to use guava in this library. Also made access modifiers explicit.

resolves #9